--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/lubiksss/web_practice/issues"
   },
-  "homepage": "https://github.com/lubiksss/web_practice#readme"
+  "homepage": "https://github.com/lubiksss/web_practice#readme",
+  "dependencies": {
+    "mysql": "^2.18.1",
+    "sanitize-html": "^1.18.2"
+  }
 }
