--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/lubiksss/web_practice#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "compression": "^1.7.4",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "mysql": "^2.18.1"
   }
 }
