--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
+    "cookie": "^0.4.2",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "mysql": "^2.18.1"
