--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "helmet": "^5.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "session-file-store": "^1.5.0"
   }
 }
